--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <a href="profile.html" class="w3-bar-item w3-button w3-hide-small w3-hover-teal">Profile</a>
 
-  <a href="color.html" class="w3-bar-item w3-button w3-hide-small w3-hover-teal">Projects</a>
+  <a href="profile.html" class="w3-bar-item w3-button w3-hide-small w3-hover-teal">Projects</a>
   
   <a href="#tech" class="w3-bar-item w3-button w3-hide-small w3-hover-teal">Technologies</a>
 
