--- a/index.html
+++ b/index.html
@@ -15,46 +15,47 @@
 <body id="myPage">
 
 <!-- Sidebar on click -->
+<!--
 <nav class="w3-sidebar w3-bar-block w3-white w3-card w3-animate-left w3-xxlarge" style="display:none;z-index:2" id="mySidebar">
+
 
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-display-topright w3-text-teal">Close
     <i class="fa fa-remove"></i>
   </a>
-  <a href="profile.html" class="w3-bar-item w3-button">Profile</a>
+  <a href="profile.html" class="w3-bar-item w3-button">Profile1</a>
   <a href="color.htm" class="w3-bar-item w3-button">Projects</a>
   <a href="#tech" class="w3-bar-item w3-button">Technologies</a>
   <a href="#contact" class="w3-bar-item w3-button">Contact</a>
-  
-  
-</nav>
+  </nav>
+ end of sidebar on-click-->
 
 <!-- Navbar -->
+
 <div class="w3-top">
  <div class="w3-bar w3-theme-d2 w3-teal w3-left-align">
 
 <!--Burger icon 'fa fa-bar' fas "fa-redo' on top right for small screen -->
 <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
 
+<!-- Top menu with large screen-->
   <a href="#" class="w3-bar-item w3-button w3-hover-teal"><i class="fa fa-home w3-margin-right"></i>Home</a>
-
   <a href="profile.html" class="w3-bar-item w3-button w3-hide-small w3-hover-teal">Profile</a>
-
-  <a href="color.html" class="w3-bar-item w3-button w3-hide-small w3-hover-teal">Projects</a>
   
-  <a href="#tech" class="w3-bar-item w3-button w3-hide-small w3-hover-teal">Technologies</a>
+    <div class="w3-dropdown-hover w3-hide-small">
+      <button class="w3-button" title="Notifications">Projects <i class="fa fa-caret-down"></i></button>     
+      <div class="w3-dropdown-content w3-card-4 w3-bar-block">
+        <a href="color.html" class="w3-bar-item w3-button w3-hide-small w3-hover-teal">ColorQuizz</a>
+        <a  href="https://www.easymail-duluth.com" class="w3-bar-item w3-button">Easymail</a>
+      </div>
+    </div>
 
+  <a href="#tech" class="w3-bar-item w3-button w3-hide-small w3-hover-teal">Technologies</a>
   <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-teal">Contact</a>
 
-   <div class="w3-dropdown-hover w3-hide-small">
-    <button class="w3-button" title="Notifications">Dropdown <i class="fa fa-caret-down"></i></button>     
-    <div class="w3-dropdown-content w3-card-4 w3-bar-block">
-      <a href="profile.html" class="w3-bar-item w3-button">Profile</a>
-      <a href="color.html" class="w3-bar-item w3-button">Projects</a>
-      <a href="#tech" class="w3-bar-item w3-button">Technologies</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
-    </div>
-  </div>
 
+
+
+<!-- rightmost on top bar, default is Dinesh Patel if date is not available-->
   <a href="#" id="#date" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-white" title="Search">-Dinesh Patel</a>
 
  </div>
@@ -62,10 +63,11 @@
 
 
  
-  <!-- Navbar on small screens -->
+  <!-- Navbar on small screens upon clicking burger icon -->
   <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium">
     <a href="profile.html" class="w3-bar-item w3-show w3-button">Profile</a>
-    <a href="color.html" class="w3-bar-item w3-button">Projetcs</a>
+    <a  href="https://www.easymail-duluth.com" class="w3-bar-item w3-button">Easymail</a>
+<a  href="color.html" class="w3-bar-item w3-button">ColorQuizz</a>
     <a href="#tech" class="w3-bar-item w3-button">Technologies</a>
     <a href="#contact" class="w3-bar-item w3-button">Contact</a>
     
@@ -92,7 +94,7 @@
 
 
 <div  id="tech" class="w3-container w3-display-container">
-  <div id="techcard" class="w3-border-3 w3-center w3-teal w3-panel w3-card-4">
+  <div id="techcard" class=" w3-center w3-teal w3-panel w3-card-2">
   
   <div  class=" iconbox w3-large w3-theme-d2 w3-teal w3-cell-row">
 
@@ -121,45 +123,58 @@
   </div>
   </div>
 </div>
+<!-- end of tech icons div -->
 
-
+<!-- starting project box -->
 <div id="projects"class="w3-row-padding w3-padding-32">
 
-  <div  class="w3-third ">
-    <div  class="w3-card-4 w3-white"  id="project1" >
-      <a href="color.html"></a>
-      <img src="color.html" alt="CQ" style="width:100%">
-        <div class="w3-container">
-          <h3>ColorQuizz</h3>
+<!-- starting individual boxes -->
+
+<!--project1 starts: rightmost box -->
+  <div class="w3-third w3-center" >
+    <a href="color.html" >
+      <div class="w3-card-4  w3-silver   padding:"0px"" id="project1">
+        <div class="w3-container  ">
+          <iframe src="color.html"  class="w3-hover-border-teal w3-border-gray w3-center w3-panel "> 
+          </iframe>
         </div>
-    </div>
-  </div>
-
-<div class="w3-third">
-    <div class="w3-card-4 w3-white" id="project2" >
-      <img src="" alt="...coming soon" style="width:100%">
-
-      <div class="w3-container">
-        <h3>Project 2</h3>
       </div>
-    </div>
+    </a>
   </div>
+  <!--Project 1 end w3-third -->
 
-  <div class="w3-third">
-    <div class="w3-card-4 w3-white" id="project3" >
-      <img src="" alt="...coming soon" style="width:100%">
-
-      <div class="w3-container">
-        <h3>Project 3</h3>
+ <!-- Project 2 starts --> 
+<div class="w3-third w3-center" >
+     <a href="https://www.easymail-duluth.com" >
+      <div class="w3-card-4 w3-silver padding:"0px"" id="project2" >
+        <div class="w3-container">
+          <iframe src="https://www.easymail-duluth.com"  class=" w3-hover-border-teal w3-border-gray w3-center w3-panel "> 
+          </iframe>
+        </div>
       </div>
-    </div>
+    </a>
   </div>
+  <!-- Project 2 ends --> 
+
+  <!-- Project 3 starts --> 
+<div class="w3-third w3-center " >
+  <div>
+  <a href="color.html" >
+      <div class="w3-card-4 w3-silver padding:"0px"" id="project3" >
+        <div class="w3-container  ">
+          <iframe src="color.html"  class="  w3-hover-border-teal w3-border-white w3-center w3-panel "> 
+          </iframe>
+        </div>
+      </div>
+    </a></div>
+  </div>
+  <!-- Project 3 ends --> 
  
 
-</div>
+</div><!-- end of Project Box-->
 
-
-<div class="w3-container w3-center-align w3-padding-14 w3-theme-l5" id="contact">
+<!-- starts contact box-->
+<div class="w3-container w3-center-align w3-padding-14 " id="contact">
   <div class="w3-row">
 
     <div class="w3-col m4">
@@ -186,10 +201,7 @@
     </div>
   
   </div>
-</div>
-
-
-<!-- Image of location/map -->
+</div><!-- end of contact box -->
 
 
 <!-- Footer -->
@@ -212,7 +224,6 @@
     <li>https://npmjs.com</li>
     <li>www.unsplash.com</li>
     <li>www.theweather.com</li>
-    <li>www.google.com</li>
     <li>...and many more.</li>
   </ul>
 
