--- a/profile.html
+++ b/profile.html
@@ -41,6 +41,9 @@ h2 {
     <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Atlanta, GA</p>
     <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>dcpatel1@hotmail.com</p>
     <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>404-513-6072</p>
+    <p><i class="fa fa-keyboard fa-fw w3-margin-right w3-large w3-text-teal"></i>www.dineshpatel.ga</p>
+    <p><i class="fa fa-keyboard fa-fw w3-margin-right w3-large w3-text-teal"></i>https://dcp1.github.io</p>
+    
     <hr>
      
          <p class="w3-large"><b><i class=" fa-fw w3-margin-right w3-text-teal"></i>Front-End</b></p>
