--- a/color.html
+++ b/color.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>The Color Game</title>
+    <title>Color Quizz</title>
     <link rel="stylesheet" type="text/css" href="color.css">
 </head>
 <body>
-	<h1> The great 
-		<br>
-		<span id="colorDisplay"> RGB </span> 
-		<br>
-	Color Game</h1>
-	
+
+<div id="topbox">
+		<h1> I am ... 
+		<br><br>
+			<span id="colorDisplay"> RGB </span>
+		 	<span>.</span>
+		
+		<br><br>
+		Can you pick me from one of the boxes below?</h1>
+</div>
+
 	<div id="stripe">
 		<button id="reset"> New Colors </button>
-		<span id="message"></span>
+		<span id="message">Click the correct color box!</span>
 		<button class = "mode" >Easy</button>
 		<button class ="mode selected" >Hard</button>
 	</div>
