--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>DineshPatel-frontpage-profile</title>
+<title>DineshPatel-DineshProfile-index.html</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
@@ -46,7 +46,6 @@ h2 {
     <p><i class="fa fa-keyboard fa-fw w3-margin-right w3-large w3-text-teal"></i>www.dineshpatel.ga</p>
 
     <p><i class="fa fa-keyboard fa-fw w3-margin-right w3-large w3-text-teal"></i>https://dcp1.github.io</p>
-    <p><i class="fa fa-keyboard fa-fw w3-margin-right w3-large w3-text-teal"></i>https://dinesh-patel.herokuapp.com</p>
     
     <hr>
      
@@ -167,24 +166,28 @@ h2 {
   </li>
   <li>Helped build a team of SMEs who can efficiently address those key technical challenges.
   </li>
-</ul>
+  </ul>
 
+  <ul>
+  <li style="list-style-type:none">
   <b>Result: </b>
   Rapid progression of project from ‘ideation’ to a ‘field-test’ stage.
+  </li>
+  </ul>
 
 <ul>  
   <li>
   Established criteria to evaluate reliability of new design of package and its impact on overall-system, and beverage quality.
   </li>
-
   <li>Facilitated engagement of cross-functional teams for chemical analysis.
   </li>
+  <li style="list-style-type:none">
   </ul>
-  
 
+  <ul>
   <b>Result: </b>
-  Rapid development of design of system which minimized mechanical failures while maintaining homogeneity of the fluid inside the package.
-
+  Rapid development of design of system which minimized mechanical failures while maintaining homogeneity of the fluid inside the package.</li>
+  </ul>
 
 
 <hr>
@@ -201,10 +204,12 @@ h2 {
   
   <li>Formed, trained, and managed a team to execute against the planned schedules.</li>
 </ul>
-  
-  <b>Result: </b>
-  Gained actionable and timely insights about the limitations and challenges of system which prepared the Company for a successful product-launch.
 
+<ul>
+  <li style="list-style-type:none">
+  <b>Result: </b>
+  Gained actionable and timely insights about the limitations and challenges of system which prepared the Company for a successful product-launch.</li>
+</ul>
 <hr>
 <p>
   <i class="w3-text-gray fas fa-signal fa-fw w3-margin-right w3-xlarge w3-text-teal"></i>
@@ -216,17 +221,24 @@ h2 {
  Identified critical variables affecting nucleation and slush-development. Developed various Design-Of-Experiments, DOEs' to quantify, analyze, and understand those variables. 
 </li>
 </ul>
- 
+
+<ul>
+ <li style="list-style-type:none">
   <b>Result: </b>
   Rapid progression of project from a proof-of-Concept to field tests.
+</li>
+</ul>
 
 <ul>
   <li>
  Developed and performed various performance evaluation tests to quantify, document, and understand quality of final beverages.  Provided solutions to improve the system and beverage quality.</li>
 </ul>
-
+<ul>
+<li style="list-style-type:none">
   <b>Result: </b>
   Enabled commercialization of about 50,000+ Freestyle dispensers in the USA.
+  </li>
+</ul>
  <hr>
 <p>
   <i class="w3-text-gray fas fa-unlock-alt fa-fw w3-margin-right w3-xlarge w3-text-teal"></i>
@@ -238,11 +250,14 @@ Problem Analysis</b>
 <li>
  Designed test-configurations composed of controls, sensors, and instruments to perform various reliability tests.</li>
  </ul>
-  <b>Result: </b>
-  Successful executions of various R & D projects through years.
 
+ <ul>
+  <li style="list-style-type:none"><b>Result: </b>
+  Successful executions of various R & D projects through years.
+  </li>
+</ul>
    <hr>     
-<h5 class=" w3-text-gray"><b>Business Owner/Operator</b></h5>
+<h5 class=" w3-text-gray"><b>Entrepreneur/Operator</b></h5>
 <h5 class="w3-opacity">Easymail, Duluth, GA</h5>
 <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2008 - <span class="w3-tag w3-teal w3-round">2014</span></h6>
   <ul>
@@ -250,15 +265,15 @@ Problem Analysis</b>
     Managed a retail business providing packaging, shipping, and truck rental services.</li>
     <li>
    Introduced new products and services, reduced expenses, and re-negotiated lease-contracts.
-</li>
-  
-  <li> Developed a website to help customers track UPS and FedEx shipments. Increased market penetration by applying Search Engine Optimization to website.</li>
-</ul>
-  <b>Result: </b>
-  <ul>
-    <li> Increased cash-flow by +100% from 2009 to 2014.
-    <li> SEO increased market penetration and customer flow.</li>
+    </li>
+    <li > Developed a website to help customers track UPS and FedEx shipments. Increased market penetration by applying Search Engine Optimization to website.</li>
   </ul>
+
+  <ul>
+    <li style="list-style-type:none"> <b>Result: </b>Increased cash-flow by +100% from 2009 to 2014.</li>
+   <li style="list-style-type:none" >SEO increased market penetration and customer flow.</li>
+</ul>
+
 </div>
 </div><!--Sysytems Dev Container -->
 
@@ -277,6 +292,7 @@ Problem Analysis</b>
 
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
+  <p> Dinesh C. Patel, 404-513-6072, dcpatel1@hotmail.com </p>
  <!--
 
   <p Find me on social media.Remove 'x' from class toamke it visable></p>
@@ -287,19 +303,7 @@ Problem Analysis</b>
   <i class="xfa fa-twitter w3-hover-opacity"></i>
   <i class="xfa fa-linkedin w3-hover-opacity"></i>
 -->
-  <ul style="list-style-type: none" >Thanks to:
-    <li>www.sublimetext.com</li>
-    <li>https://github.com.com</li>
-    <li>www.freenom.com</li>
-    <li>www.heroku.com</li>
-    <li>https://nodejs.org</li>
-    <li>https://expressjs.com</li>
-    <li>https://npmjs.com</li>
-    <li>www.unsplash.com</li>
-    <li>www.theweather.com</li>
-    <li>www.w3schools.com/w3css</li>
-    <li>...and many more.</li>
-  </ul>
+  
   
 </footer>
 
