--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <img src="https://source.unsplash.com/random/?spectrums" alt="spectrums" style="width:100%;min-height:350px;max-height:350px">
 -->
   <div class="w3-display-container  w3-circle w3-animate-opacity">
-  <img src="image/DCP-Drawing1118.jpg" alt="DCP-Drawing1118.jpg" style="width:100%;min-height:350px;max-height:350px">
+  <img src="/DCP-Drawing1118.jpg" alt="DCP-Drawing1118.jpg" style="width:100%;min-height:350px;max-height:350px">
 <!--
 <div class="w3-bar w3-theme-d2 w3-teal w3-center-align">
   <span class="padding:5px">  Refresh the page to get a new image. Courtesy of www.unsplash.com </span>
