--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
       <div class="w3-half" style="max-width:300px"><!-- image of first set on left -->
        <div class="container">
           <div class="vertical-center">
-            <a href="movies.html">
+            
             <img class="project-image" src="https://image.tmdb.org/t/p/w500//fw02ONlDhrYjTSZV8XO6hhU3ds3.jpg" style="width:100% ">
-          </a>
+          
           </div>
         </div>
       </div>  
@@ -202,7 +202,7 @@
               <p> I developed this site and applied SEO-Google Analytics which helped me to turn around the business, which I eventually sold it.</p>
               <p><i>Note: I am no longer affiliated with Easymail or this website.</i></p>
               <button id="btn3" type="button" class="w3-button  w3-border w3-small w3-round w3-hover-black"  style="border:none;">
-              <a href="http://www.easymail-duluth.com/" target="frame3" onclick="document.getElementById('frame-div3').style.cssText = ''">Visit Easymail</a>
+              <a href="http://www.easymail-duluth.com/" target="frame3" onclick="document.getElementById('frame-div3').style.cssText = ''">Click the image</a>
               </button>
 
 
