--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ www.linkedin.com/in/dinesh-patel-gets-job-done
 </li><!---->  
 </ul>
 <strong>JavaScript Developer</strong>
-Robust JavaScript Web Developer who has leveraged competencies and skilled gained by transforming engineering products from “ideation” to “commercialization” through prototyping, quality analysis, and the exploration and application of new technologies for design optimization.  
+Robust JavaScript Web Developer who has leveraged competencies and skills gained by transforming engineering products from “ideation” to “commercialization” through prototyping, quality analysis, and the exploration and application of new technologies for design optimization.  
 
 <strong>Skills: </strong>
 • HTML
@@ -318,7 +318,7 @@ Six Sigma Green Belt
 Project Management Training
 The Web Developer Bootcamp<!-- id=resume ends -->
 <ul style="list-style: none;">
-<li><button class="w3-button "><a href="DineshPatel-Resume1.doc" download><i class="fa fa-download"></i> Download .doc Resume</a></button></li><li><button class="w3-button "><a href="DineshPatel-Resume1.pdf" download><i class="fa fa-download"></i> Download .pdf Resume</a></button></li></ul></div>
+<li><button class="w3-button "><a href="DineshPatel-Resume.doc" download><i class="fa fa-download"></i> Download .doc Resume</a></button></li><li><button class="w3-button "><a href="DineshPatel-Resume.pdf" download><i class="fa fa-download"></i> Download .pdf Resume</a></button></li></ul></div>
 </pre>    
 </div><!-- end of My Resume section. starts>> Contact Section -->
   <div class="w3-content w3-justify w3-text-light-grey  xw3-padding-64" >
