--- a/index.html
+++ b/index.html
@@ -235,9 +235,10 @@
 Dinesh C. Patel
 Greater Atlanta, GA
 404-513-607
+dcpatel1@hotmail.com
 <ul id="resume-links">
 <li> <a  href="http://www.linkedin.com/in/dinesh-patel-gets-job-done/">
-www.linkedin.com/in/dinesh-patel-gets-job-done
+www.linkedin.com/in/dinescpatel
 </a></li>
 <li>
 <a href="http://dcp1.github.io/">http://dcp1.github.io</a>
