--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ Entrepreneur
   Dinesh C. Patel
 
   404-513-6072
-  Greater Atlanta
+  (Greater Atlanta)
         
   dcpatel1@hotmail.com
   <a href="http://www.linkedin.com/in/dineshcpatel/">
