--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
     <p >MySQL</p>
      <p>RESTful Routing/API</p>
     <p >Node.js: NPM, Express.js</p>
-    <p >MongoDB</p>
+    <p >GraphQL</p>
+     <p>MongoDB</p>
     <p >Git/GitHub</p>
     
   </div>
