--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
     <div class=""  height="900px">
     
     <p>As a person:</p>
+      <!-- Power BI update on 12/13/19 -->
+     <p> At present, I am developing compelling dashborads and reports with Power BI. </p>
     <p>I have worked at The Coca-Cola Company as a Systems Design Engineer where I was responsible to convert ambiguous ideas into functional systems. I did this by learning new concepts, building prototypes and designing experiments. I adapted to ever-changing business needs and challenges by learning new skills, making improvements, and collaboration. As a result, I earned a reputation as someone who “makes the improvements and gets the job done”.</p>
     <P></P>
     <p>As a  programmer:</p>
