--- a/index.html
+++ b/index.html
@@ -106,11 +106,14 @@
      <p> DAX Studio </p>
      <p>Github</p>
    <!-- <p style='margin-bottom:1px' >: Sass, Bootstrap3, Bootstrap4, W3.CSS, Semantic UI</p> -->
+     <p >Java</p>
      <p >JavaScript</p>
     <!-- <p >jQuery</p> -->
     <p >React.js</p>
+     <p >HTML</p>
+     <p >CSS</p>
     <p >SQL</p>
-     <p>RESTful Routing/API</p>
+     <!-- <p>RESTful Routing/API</p> -->
     <!-- <p >Node.js: NPM, Express.js</p> -->
    <!--  <p >GraphQL</p> -->
      <p>MongoDB</p>
@@ -167,9 +170,7 @@
 
                 <button id="btn1" type="button" class="w3-button  w3-border w3-small w3-round w3-hover-black"  style="border:none;">
               <a href="movies.html" target="frame1" onclick="document.getElementById('frame-div1').style.cssText = ''">Get your movie</a>
-            </button>
-
-             
+            </button>          
               </div>
             </div >
           </div >
@@ -184,12 +185,6 @@
       <button type="button" class="w3-button w3-border w3-small w3-round w3-hover-black" onclick="document.getElementById('frame-div1').style.display='none'" style="border:none;">Click to close.
       </button>
 
-
-
-
-
-
-
        <iframe src="" width="1200px" height="700px" style="border:none;" name="frame1"></iframe>
   </div>
 
@@ -197,8 +192,6 @@
 
 <br>
 <br>
-   
-   
     <div class="w3-row-padding" style="margin:0 -16px">
 
       <div class="w3-half" style="width:300px">
@@ -284,7 +277,7 @@
     <hr style="width:200px" class="w3-opacity">
     <div class=""  height="900px">
 
-    <h4 >Highlights</h4>
+   <!--  <h4 >Highlights</h4> -->
       
   <pre class= 'w3-text-sand '>
 • Manually converted reports and dashboards from Tableau to Power BI.
