--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
     <P></P>
      <p>In 2010, I developed my first website, www.easymail-duluth.com, for a packaging and shippng business called Easymail in Duluth, Georgia. My skills in web development, Search Engine Optimization (SEO), and Google Analytics helped to increase traffic to the website as well as retail store, and eventually helped to revive the business during the recession. For the last three years, I am sharpening my skills in various technologies and tools including HTML, CSS, Bootstrap, JavaScript, React.js, jQuery, AJAX, Node.js, and RESTful API. </p>
     <P></P>
-   <!--  <p>Values:</p> -->
+   <!--  <p>Values:</p> 
     <p>My ‘can-do’ attitude, passion to learn, and software skills will bring significant value in a team where performance matters the most.</p>
-    <P></P>
+    -->
+<P></P>
      
      <h2 class="w3-opacity">Objective</h2>
     <hr style="width:200px" class="w3-opacity">
@@ -315,9 +316,8 @@ Entrepreneur
    
 <!-- contact starts -->
 <div class="w3-content w3-justify w3-text-light-grey  xw3-padding-64" >
-  <hr style="width:200px" class="w3-opacity">
-  <h2 class="w3-text-sand w3-opacity">Contact</h2>
-   
+    <h2 class="w3-text-sand w3-opacity">Contact</h2>
+   <hr style="width:200px" class="w3-opacity">
   <div id="contact" class="w3-text-sand">
 
   <p>
@@ -349,9 +349,8 @@ Entrepreneur
  
 <!-- misc starts -->
   <div class="w3-content w3-justify w3-text-light-grey  xw3-padding-64" >
+       <h2 class="w3-text-sand w3-opacity">Misc</h2>
     <hr style="width:200px" class="w3-opacity">
-    <h2 class="w3-text-sand w3-opacity">Misc</h2>
-   
     <div id="misc" class="w3-text-sand">
       <p> US Citizen</p>
       <p>
