--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ Entrepreneur
 <br>
  <!-- End of Contact Section -->
  
-<!-- misc starts -->
+<!-- misc starts 
   <div class="w3-content w3-justify w3-text-light-grey  xw3-padding-64" >
        <h2 class="w3-text-sand w3-opacity">Misc</h2>
     <hr style="width:200px" class="w3-opacity">
@@ -363,8 +363,7 @@ Southern College of Technology, Marietta, GA
       <br>
     </div>
   </div>
-
- <!-- misc ends -->
+misc ends -->
 
 <!-- END PAGE CONTENT -->
 </div>
