--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
       <!-- Power BI update on 12/13/19 -->
      <p> I am developing compelling dashborads and reports with Power BI and improving performance of existing dashboards.</p>
      <!-- <p>Background:</p> -->
-    <p>I have worked at The Coca-Cola Company as a Systems Design Engineer where I was responsible to convert ambiguous ideas into functional systems. I did this by learning new concepts, building prototypes and designing experiments. I adapted to ever-changing business needs and challenges by learning new skills, making improvements, and collaboration. As a result, I earned a reputation as someone who “makes the improvements and gets the job done”.</p>
+    <p>I have worked at The Coca-Cola Company as a Systems Design Engineer where I was responsible to convert ambiguous ideas into functional systems. I welcomed new challenges by learning new skills, collobration, and making improvements. As a result, I earned a reputation as someone who “makes the improvements and gets the job done”.</p>
     <P></P>
-     <p>In 2010, I developed my first website, www.easymail-duluth.com, for a packaging and shippng business called Easymail in Duluth, Georgia. My skills in web development, Search Engine Optimization (SEO), and Google Analytics helped to increase traffic to the website as well as retail store, and eventually helped to revive the business during the recession. For the last three years, I am sharpening my skills in various technologies and tools including HTML, CSS, Bootstrap, JavaScript, React.js, jQuery, AJAX, Node.js, and RESTful API. </p>
+     <p>In 2010, I developed my first website, www.easymail-duluth.com, for a retail business called Easymail in Duluth, Georgia. My skills in web development, Search Engine Optimization (SEO), and Google Analytics helped to increase traffic to the website as well as retail store, and eventually helped to revive the business during the recession. For the last four years, I am sharpening my skills in various technologies and tools including Power BI, Tableau, SQL Server, Java, JavaScript, React.JS, HTML, and CSS. </p>
     <P></P>
    <!--  <p>Values:</p> 
     <p>My ‘can-do’ attitude, passion to learn, and software skills will bring significant value in a team where performance matters the most.</p>
