--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <hr style="width:200px" class="w3-opacity">
     <div class=""  height="900px">
      
-    <p>I am looking forward to add value as a ...</p>
+    <p>I am looking forward to keep adding values as a...</p>
 
     <ul>
       <li>Power BI Developer</li>
